--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-﻿# Created by https://www.toptal.com/developers/gitignore/api/rider,visualstudio,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=rider,visualstudio,visualstudiocode
+﻿# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,jetbrains+all
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,jetbrains+all
 
-### Rider ###
+### JetBrains+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -79,6 +79,15 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+### JetBrains+all Patch ###
+# Ignore everything but code style settings and run configurations
+# that are supposed to be shared within teams.
+
+.idea/*
+
+!.idea/codeStyles
+!.idea/runConfigurations
 
 ### VisualStudioCode ###
 .vscode/*
